       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.35 (v0_8_35) on Linux (lb32001) on 5/18/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.35 (v0_8_35) on Linux (lb0169) on 5/18/2007 ==

	
2007-05-18  Brian Kahne  <bkahne@freescale.com>

	* Removed the building of libgccpp.la because it caused link
	errors when linked statically against libstdc++ (it overrides new
	and delete, which causes multiply-defined-symbol errors if done
	statically).  We don't use this library, so that shouldn't be a
	problem.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.34 (v0_8_34) on Linux (lb0169) on 4/4/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.34 (v0_8_34) on Linux (lb32001) on 4/4/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.34 (v0_8_34) on Linux (lb0169) on 4/4/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.34 (v0_8_34) on Linux (lb32001) on 4/4/2007 ==

2007-04-04  Brian Kahne  <bkahne@freescale.com>

	* Fixed a bug in Program::LineNumber.  It was incorrectly looking
	at string contents, so a string that contained something that
	looked like a line number would be counted as a line number.
	Added parsing/in10.C to test this.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.33 (v0_8_33) on Linux (lb32001) on 4/3/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.33 (v0_8_33) on Linux (lb0169) on 4/3/2007 ==

2007-04-03  Brian Kahne  <bkahne@freescale.com>

	* Make MakeTempName non-static so that a user of the library can
	override it to allow for alternate intermediate file names.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.32 (v0_8_32) on Linux (lb32001) on 3/23/2007 ==

2007-03-23  Brian Kahne  <bkahne@freescale.com>

	* I no longer build meas in the qt directory b/c for some reason,
	it  doesn't build on i686 platforms.  This is just a test program,
	so it's not required by anything else.
